--- a/tutorial2.ipynb
+++ b/tutorial2.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -11448,6 +11448,76 @@
    "source": [
     "%matplotlib notebook\n",
     "display_data_with_colors(data_df,method_num=5, dims=3, plot_kwargs={'c': colors}) #lle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def knn_stats(samples, labels, n_neighbours):\n",
+    "    nbrs = NearestNeighbors(n_neighbours, algorithm='brute').fit(samples)\n",
+    "    distances, indices = nbrs.kneighbors(samples)\n",
+    "    \n",
+    "    neighbour_stats = []\n",
+    "    \n",
+    "    for index, neighbours in enumerate(indices):\n",
+    "        same_cluster_neighbours = filter(\n",
+    "            lambda neighbour: labels[neighbour] == labels[index],\n",
+    "            neighbours\n",
+    "        )\n",
+    "        neighbour_stats.append(len(list(same_cluster_neighbours)))\n",
+    "        \n",
+    "    return neighbour_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "components_pca, pca = perform_pca(data_df, 2)\n",
+    "components_kpca, kpca = perform_kernel_pca(data_df, 2)\n",
+    "components_mds, mds = perform_mds(data_df, 2)\n",
+    "components_iso, iso = perform_isomap(data_df, 2, 5)\n",
+    "components_lle, lle = perform_lle(data_df, 2, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pca:  14.399707174231333 out of  15  neighbors\n",
+      "kpca:  14.181551976573939 out of  15  neighbors\n",
+      "mds:  14.390922401171304 out of  15  neighbors\n",
+      "isomap:  14.366032210834554 out of  15  neighbors\n",
+      "lle:  13.797950219619327 out of  15  neighbors\n"
+     ]
+    }
+   ],
+   "source": [
+    "nbors = 15\n",
+    "stats = knn_stats(components_pca, class_list, nbors)\n",
+    "print('pca: ', np.mean(stats), 'out of ', nbors, ' neighbors')\n",
+    "\n",
+    "stats = knn_stats(components_kpca, class_list, nbors)\n",
+    "print('kpca: ', np.mean(stats), 'out of ', nbors, ' neighbors')\n",
+    "\n",
+    "stats = knn_stats(components_mds, class_list, nbors)\n",
+    "print('mds: ', np.mean(stats), 'out of ', nbors, ' neighbors')\n",
+    "\n",
+    "stats = knn_stats(components_iso, class_list, nbors)\n",
+    "print('isomap: ', np.mean(stats), 'out of ', nbors, ' neighbors')\n",
+    "\n",
+    "stats = knn_stats(components_lle, class_list, nbors)\n",
+    "print('lle: ', np.mean(stats), 'out of ', nbors, ' neighbors')"
    ]
   },
   {
