--- a/mds_pca_comparison_iris.ipynb
+++ b/mds_pca_comparison_iris.ipynb
@@ -8326,6 +8326,39 @@
    "source": [
     "components, lle = display_data_with_colors(data,method_num=5, dims=3, plot_kwargs=plot_setting) #lle"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K nearest neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def knn_stats(samples, labels, n_neighbours):\n",
+    "    '''Calculates the percentage of neighbours that belong to the same class for each sample.'''\n",
+    "    \n",
+    "    nbrs = NearestNeighbors(n_neighbours, algorithm='brute').fit(samples)\n",
+    "    distances, indices = nbrs.kneighbors(samples)\n",
+    "    \n",
+    "    neighbour_stats = []\n",
+    "    \n",
+    "    for index, neighbours in enumerate(indices):\n",
+    "        same_cluster_neighbours = filter(\n",
+    "            lambda neighbour: labels[neighbour] == labels[index],\n",
+    "            neighbours\n",
+    "        )\n",
+    "        neighbour_stats.append(len(list(same_cluster_neighbours)) / n_neighbours)\n",
+    "        \n",
+    "    return neighbour_stats"
+   ]
   }
  ],
  "metadata": {
