--- a/Zadanie1.ipynb
+++ b/Zadanie1.ipynb
@@ -26,8 +26,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Atrybut 1 jest atrybutem definiującym klasy]"
+    "###### [Atrybut 1 jest atrybutem definiującym klasy]\n",
+    "###### [Opis - lung-cancer.names]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
