--- a/Zadanie2.ipynb
+++ b/Zadanie2.ipynb
@@ -31,6 +31,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Atrybut 1 jest atrybutem definiującym klasy]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
