--- a/Zadanie2.ipynb
+++ b/Zadanie2.ipynb
@@ -38,6 +38,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Opis: abalone.names]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
