--- a/Zadanie2.ipynb
+++ b/Zadanie2.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Atrybut 1 jest atrybutem definiującym klasy]"
+    "[Ostatni atrybut jest atrybutem definiującym klasy]"
    ]
   },
   {
