--- a/Zadanie2.ipynb
+++ b/Zadanie2.ipynb
@@ -11,37 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Na podstawie przykładów dostępnych w tutorialu, przeprowadzić wizualizację zbioru danych \"abalone\"\n",
-    "-metodami: PCA, Kernel PCA, MDS, Isomap, oraz LLE"
+    "### Zbiór sphere jest zbiorem o dwóch klastrach, do którego zostały dogenerowane losowo wymiary."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Zbadać działanie metod za pomocą metryki neighbours-hit"
+    "### -należy spróbować odfilrować część wymiarów, i dzięki wizualizacji zaobserwować, które z wymiarów mogły znajdować się w oryginalnym zbiorze"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Do tego zbioru zostały dodane wygenerowane losowo wymiary\n",
-    "-należy spróbować odfilrować część wymiarów, i dzięki wizualizacji zaobserwować, które z wymiarów mogły znajdować się w oryginalnym zbiorze"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Ostatni atrybut jest atrybutem definiującym klasy]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Opis: abalone.names]"
+    "### [Pierwszy atrybut - klasa]"
    ]
   },
   {
